@@ -62,6 +62,8 @@ static const struct {
     "Bad field name on line {3} of {2}: {4}", 0 },
   { GD_E_FORMAT, GD_E_FORMAT_UNTERM,
     "Unterminated token on line {3} of {2}", 0 },
+  { GD_E_BAD_ENTRY, GD_E_FORMAT_METARAW,
+    "Invalid metafield type on line {3} or {2}", 0 },
   /* GD_E_CREAT: 1 = suberror, 2 = filename. 3 = errno */
   { GD_E_TRUNC, 0, "Error truncating {2}: ", 1 },
   /* GD_E_CREAT: 1 = suberror, 2 = filename, 3 = errno */
@@ -117,6 +119,7 @@ static const struct {
   { GD_E_BAD_ENTRY, GD_E_BAD_ENTRY_NUMBITS, "Numbits out of range: {3}", 0 },
   { GD_E_BAD_ENTRY, GD_E_BAD_ENTRY_BITSIZE,
     "End of bitfield out of range: {3}", 0 },
+  { GD_E_BAD_ENTRY, GD_E_BAD_ENTRY_METARAW, "Invalid metafield type: {3}", 0 },
   /* GD_E_DUPLICATE 4 = name */
   { GD_E_DUPLICATE, 0, "Field code already present: {4}", 0 },
   /* GD_E_OK: (nothing) */
